static/css/base.css
html {
    min-height: 100%;
    width: 100%;
}

body {
    background: url('/media/gift.jpg') no-repeat center center fixed;
    background-size: cover;
    position: absolute;
    font-family: 'Lato';
}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}
.logo-font {
    text-transform: none;
    margin: 5px 30px;
    font-size: 1.2rem;
}
.logo-font-header {
    text-transform: none;
    margin: 5px;
    font-family: 'Damion', cursive;
    color: #daac69;
    text-shadow: 2px 2px #000;
    font-size: 1.2rem;
}
.small {
    font-weight: bold;
    color: #fff;
    font-size: 1rem;
}
/* rotate text */
.rotate {
    font-size: 80px;
    -webkit-transform: rotate(-10deg);
    -moz-transform: rotate(-10deg);
    -ms-transform: rotate(-10deg);
    -o-transform: rotate(-10deg);
    transform: rotate(-10deg);
    -webkit-transform-origin: 50% 50%;
    -moz-transform-origin: 50% 50%;
    -ms-transform-origin: 50% 50%;
    -o-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
}

.main-logo-link {
    height: 10vh;
    width: 10vw;
    margin: 20px;
    z-index: 9999999;
}

.shop-now-button {
    background: #000;
    color: white;
    border-radius: 10px !important;
    min-width: 240px;
}

.btn-black {
    background: black;
    color: white;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: #000;
    color: rgb(248, 244, 244);
}

.btn-black-2 {
    background: rgb(255, 183, 245);
}
.text-black {
    color: #000;
}

.border-black {
    border: 1px solid black !important;
}

.logo-gold{
    position: absolute;
    transform: translate(-50%,-50%);
    top: 50%;
    left: 100%;
    font-family: 'Damion',cursive;
    letter-spacing: .2rem;
    font-size: 80px;
    font-weight: bold;
    background-image: linear-gradient(
     to right,
     #ca984d 0,
     #f6e27a 22%, 
     #f0df8a 45%,
     #f6f2c0 50%,
     #f6e27a 55%,
     #cb9b51 78%,
     #d8a14f 100%
     );
    color:transparent;
    -webkit-background-clip:text;
 }

.logo-font-small{
     font-family:'Lato', serif;
     font-size: 40px; 
     letter-spacing: .1rem;
 }

.euro {
    font-family: 'Damion',cursive;
    font-size: 40px;
}

/* snow banner image */
.snow{
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
    background: url('/media/snow.jpg');
    z-index: -3;
}
.snow:nth-child(1){
    animation: animate 10s linear infinite;
}
.snow:nth-child(2){
    animation: animate 15s linear infinite;
}
.snow:nth-child(3){
    animation: animate 20s linear infinite;
}
.snow:nth-child(4){
    animation: animate 14s linear infinite;
}
.snow:nth-child(5){
    animation: animate 16s linear infinite;
}
@keyframes animate {
    0% {
        background-position-x: 50px;
        background-position-y: 0;
    }
    100% {
        background-position-x: 50px;
        background-position-y: 600px;
    }
}
@keyframes animate2 {
    0% {
        background-position-x: 100px;
        background-position-y: 0;
    }
    100% {
        background-position-x: 100px;
        background-position-y: 600px;
    }
}
@keyframes animate3 {
    0% {
        transform: scale(1.5);
        background-position-x: -100px;
        background-position-y: 0;
    }
    100% {
        transform: scale(1.5);
        background-position-x: -100px;
        background-position-y: 600px;
    }
}

.bg-black {
    background: transparent;
    padding: 0 10px;
}
.bg-gold {
    color: #000;
    background: linear-gradient(to right, #bf953f, #fcf6ba, #b38728, #fbf5b7, #aa771c);
}

.bg-gold:hover{
    background: linear-gradient(to right, #AFB1AE, #E6E9E5, #B1B1B1, #E6E9E5, #C0C0C0);
}

.overlay {
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    background: white;
    z-index: -1;
}

a.category-badge > span.badge:hover {
    background: #047bf1 !important;
    color: rgb(22, 21, 21) !important;
}
.btt-button {
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;
}
.btt-link,
.update-link,
.remove-link {
    cursor: pointer;
}

input[name='q']::placeholder {
    color: #aab7c4;
}

/* ------------------------------- bootstrap toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}
/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/* -------------------------------- Media Queries */


/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* Allauth form formatting */
.allauth-form-inner-content p{
    margin-top: 1.5rem; /* mt-4 */
    color: #6c757d;
}
.allauth-form-inner-content input{
    border-color: #000;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']){
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aaaabb;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #000;
    border: 1px solid #000;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #fff;
    background-color: #222;
    border-color: #222;
}

.allauth-form-inner-content a {
	color: #17a2b8; /* text-info */
}

/* Product Form */
.img-fluid{
    height: 320px;
    width: 340px;
}
.btn-file{
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #000;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #f0df8a;
    border-radius: 0;
}

.logo-container {
    background-color: #000;
}

.logo-overlay {
        background: url('/media/header-logo-cropped.jpg') no-repeat center center fixed;
        background-size: cover;
        height: calc(80vh - 130px);
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 250px;
    }
}

/* fixed top navbar only on small screens */
@media (max-width: 991px) {
    .header-container {
        padding-top: 220px;
    }

    
    .display-4.logo-font.text-black {
        font-size: 2rem;
    }

    .nav-link {
        padding: 0.15rem;
    }

    .nav-link i.fa-lg {
        font-size: 1rem;
    }

    .navbar-toggler {
        padding: .6rem .6rem;
        font-size: 1rem;
        border-color: #000 !important;
        color: #000 !important;
        
    }
    .rotate{
        font-size: 60px;
    }
    .small{
        font-size: 15px;
    }
    .img-fluid{
        height: 200px;
        width: 200px;
    }
    .logo-font-banner{
        font-size: 25px;
    }
    .euro{
        font-size: 25px;
    }
}
@media (min-width: 655px){
    .logo-font-banner{
        font-size: 35px;
    }
    .euro{
        font-size: 35px;
    }
}
.flex-container {
    display: flex;
  }
  
  .flex-container > div {
    background-color: rgb(255, 248, 239);
    margin: 10px;
    width: 50% !important;
    padding: 20px;
    font-size: 30px;
  }

  .container-sustain{
      background-color:rgb(255, 248, 239);
      z-index: -1;
      padding: 40px 20px;
  }
  .history {
      text-align: center;
  }
  .blog-overlay {
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    background: url('/media/blog-overlay.jpg') no-repeat center center fixed;
    background-size: cover;
    z-index: -3 !important;
    overflow-x: hidden;
}

.team-image {
    height: 180px;
    width: 180px;
    object-fit: cover;
}
.team {
    color: #36454f;
    font-size: 1rem;
}
.team-role {
    color: #36454f;
    font-size: 1.3rem;
}
.team-heading{
    font-size: 1.9rem;
}
.signature{
    font-family: 'Damion', cursive;
    font-size: 2rem;
}
.sustain-title{
    font-size: 1.5rem;
}
@media (max-width: 991px) {
.team-image {
    height: 80px;
    width: 80px;
    object-fit: cover;
    padding-bottom: 5px;
}
.team-role {
    font-size: .9rem;
}
.team {
    font-size: .7rem;
}
}

@media (max-width: 991px) {
    body {
        height: calc(100vh -44px);
}
}
.product-top, .blog-top{
    margin-top: 280px;
    width: 100vw;
}
.blog-top-small{
    width: 100vw;
    margin-top: 100px; 
}

footer{
        position: relative;
        bottom:0;
        width:100%;
        height:100px;   /* Height of the footer */
        background:#000;
        color:#fff;
     }
.comment-review-heading{
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

